# wecommit_presskitagent

./: LICENSE  README.md  pyproject.toml
src/wecommit_presskitagent/: crew.py  main.py
src/wecommit_presskitagent/config/: agents.yaml  tasks.yaml
